document.createElement('br')

--- a/weddingform/templates/form.html
+++ b/weddingform/templates/form.html
@@ -278,6 +278,9 @@
 
             additionalAttendeesDiv.appendChild(inputLabel);
             additionalAttendeesDiv.appendChild(inputField);
+
+            const lineBreak = document.createElement('br');
+            additionalAttendeesDiv.appendChild(lineBreak);
           }
         } else {
           additionalAttendeesDiv.style.display = 'none';
