--- a/weddingform/templates/form.html
+++ b/weddingform/templates/form.html
@@ -236,7 +236,9 @@
         陪同參加者：${additionalAttendeesString}
         準備兒童座椅：${childSeatCount}
         葷食：${omnivoreCount}
-        素食：${vegetarianCount}`;
+        素食：${vegetarianCount}
+        
+        感謝您的填寫，視窗已可關閉`;
 
         fetch('../create_user/', {
           method: 'POST',
