--- a/weddingform/templates/form.html
+++ b/weddingform/templates/form.html
@@ -235,7 +235,13 @@
           },
           body: JSON.stringify(formData),
         })
-          .then((response) => response.json())
+          .then((response) => {
+            if (response.ok) {
+              return response.json();
+            } else {
+              throw new Error('Network response was not ok');
+            }
+          })
           .then((data) => {
             console.log('Response from server:', data);
             alert('報名成功');
