--- a/weddingform/templates/form.html
+++ b/weddingform/templates/form.html
@@ -249,7 +249,7 @@
           })
           .catch((error) => {
             console.error('Error:', error);
-            alert('報名失敗，請聯繫客服');
+            alert('報名失敗，請聯繫我們');
           });
       });
       // 顯示陪同參加者的輸入框
